--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,7 +1,7 @@
 <ion-view view-title="landing">
   <ion-content scroll="false">
     <div id="landing-page" class="set-bg" full-height="" style="height: 736px;">
-	 <div  class="bg-image full-height" full-height>
+	 <div  class="bg-yellow full-height" full-height>
 			<div class='main-container'>
 				<div id='logo-box'>
 					<img class='logo vertical-middle' src=''/>
