--- a/templates/main-landing.html
+++ b/templates/main-landing.html
@@ -77,9 +77,9 @@
 
 		<ion-scroll delegate-handle="calendarScroll" direction="x" class='bg-dark2'>
 
-            <div class="row no-padding text-center "> 
+            <div class="row no-padding text-center ">
                 <div class="col col-25" ng-class="{active_cab : active_cab == $index }" ng-click='clicked_item($index)' ng-repeat="cab in cabs">
-                    <div class="col color-yellow">{{cab.cartype | limitTo:7 }}<span ng-show='cab.cartype.length > 7' >..</span></div>
+                    <div class="col color-yellow">{{cab.cartype | limitTo:15 }}<span ng-show='cab.cartype.length > 15' ></span></div>
                     <img ng-src='img/{{cab.cartype}}.png' err-SRC="img/Sedan.png" style='width: 50px' />
                     <!-- <div class="col color-gery">{{day.number}}</div> -->
 
