--- a/css/theme.css
+++ b/css/theme.css
@@ -14,7 +14,7 @@
 .bg-grey{  background-color: #000}
 
 /* common color */
-.color-yellow{ color:  #00b3e8 !important;}
+.color-yellow{ color:  #fafafa !important;}
 .color-gery{ color: #929292 !important }
 .color-d-gery{ color: #4d4d4d !important }
 
