--- a/css/theme.css
+++ b/css/theme.css
@@ -17,6 +17,7 @@
 .color-yellow{ color:  #000000 !important;}
 .color-gery{ color: #929292 !important }
 .color-d-gery{ color: #4d4d4d !important }
+.color-white{ color: #ffffff !important }
 
 .test-h{height: 40px}
 
