--- a/templates/my-trip.html
+++ b/templates/my-trip.html
@@ -12,7 +12,7 @@
 				<ion-scroll direction="y" style='height: 100%'>
 					<a href="#/app/tripDetials" ng-click='show_details($index)' class="item item-icon-left item-icon-right color-gery " ng-repeat='item in active_trip' href="#">
 						<i class="icon ion-ios-cog f-size-25 color-d-gery"></i>
-							<p class='color-yellow f-size-17'> {{item.pickup_area }}</p>
+							<p class='color-white f-size-17'> {{item.pickup_area }}</p>
 							<span class='f-size-12 color-gery'><i>{{item.pickup_date}} </i></span>
 						<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
 				  </a>
