--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
 							<!-- <small class="error	pull-left m-left-30" ng-show="sign_in_form.mail.$error.email">Enter valid email</small>-->
 						</div>
 						<input name='mail' ng-model='login.mail' required placeholder="{{ 'Mobile / User Name / Email' | langTranslate: appConvertedLang['Mobile_User_Name_Email'] }}" class='color-yellow' type='text' />
-						<img class='input-icon icon-20' src='img/icons/mobile.png'/>
+						<img class='input-icon icon-20' src='img/icons/user.png'/>
 					</div>
 					</br>
 					<div class='input-box'>
