--- a/templates/rate-card.html
+++ b/templates/rate-card.html
@@ -22,7 +22,7 @@
 										<p class='color-gery no-margin'>{{ 'First' | langTranslate: appConvertedLang['First'] }} {{item.intialkm}} kms</p>
 									</div>
 									<div class="col   p-10 text-right col-center" >
-										<span class='color-yellow'>₹</span> <span class='color-gery'>{{item.intailrate}} per km</span>
+										<span class='color-yellow'></span> <span class='color-gery'>{{item.intailrate}} per km</span>
 									</div>
 							</div>
 							<div class="row p-top-5 b-border-light">
@@ -30,7 +30,7 @@
 										<p class='color-gery no-margin'>{{ 'After' | langTranslate: appConvertedLang['After'] }} {{item.intialkm}} kms</p>
 									</div>
 									<div class="col   p-10 text-right col-center" >
-										<span class='color-yellow'>₹</span> <span class='color-gery'>{{item.standardrate}} per km</span>
+										<span class='color-yellow'></span> <span class='color-gery'>{{item.standardrate}} per km</span>
 									</div>
 							</div>
 						</div>
