--- a/templates/trip-details.html
+++ b/templates/trip-details.html
@@ -69,7 +69,7 @@
 							<p class='color-gery no-margin'>{{ 'Total Amount' | langTranslate: appConvertedLang['Total_Amount'] }}</p>
 						</div>
 						<div class="col   p-10 text-center col-center" >
-							<p class='pull-right'><span class='color-white'>₹</span> <span class='color-gery'>{{details.amount}}</span></p>
+							<p class='pull-right'><span class='color-white'></span> <span class='color-gery'>{{details.amount}}</span></p>
 						</div>
 				</div>
 
