--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ ion-scroll[direction=x] {
 }
 .bar-footer{ border: none !important;}
 
-#my-pop{ border-top: 3px solid  #000000;	}
+#my-pop{ border-top: 3px solid  #242f3e;	}
 #my-pop .head-box{ height: 70px; }
 #fare-breakup-box{border-top: 1px solid #1C1C1C; margin-top: 15px;}
 
