--- a/css/theme.css
+++ b/css/theme.css
@@ -6,8 +6,8 @@
 .bg-white{background-color: #ffffff;}
 
 .bg-dark{ background-color: #ffffff !important;}
-.bg-dark1{ background-color: #000000 !important;}
-.bg-dark2{background-color: ##0a0a0a !important;}
+.bg-dark1{ background-color: #f8f8f8 !important;}
+.bg-dark2{background-color: #0a0a0a !important;}
 .bg-light{background-color: #38393D !important;}
 
 .color-white {color: #fff !important;}
@@ -15,7 +15,7 @@
 
 /* common color */
 .color-yellow{ color:  #000000 !important;}
-.color-gery{ color: #929292 !important }
+.color-gery{ color: #131313 !important }
 .color-d-gery{ color: #4d4d4d !important }
 .color-white{ color: #ffffff !important }
 
@@ -66,9 +66,9 @@
 }
 /* #set-top{ border: 1px solid #00b3e8;} */
 
-.popup{ background-color: #000000 !important; border-radius: 10px !important;}
+.popup{ background-color: #ffffff !important; border-radius: 10px !important;}
 
-.popup-head { border-bottom: 1px solid #444444 !important; }
+.popup-head { border-bottom: 1px solid #000000 !important; }
 
 .popup-title {}
 
@@ -78,7 +78,7 @@
 
 .popup-buttons.row {}
 
-.popup-buttons .button {border: 1px solid #1C1C1C !important; color: #00b3e8 !important; background-color:#444444 !important; border-radius: 5px !important; }
+.popup-buttons .button {border: 1px solid #1C1C1C !important; color: #ffffff !important; background-color:#444444 !important; border-radius: 5px !important; }
 
 
 
