--- a/css/theme.css
+++ b/css/theme.css
@@ -7,7 +7,7 @@
 
 .bg-dark{ background-color: #ffffff !important;}
 .bg-dark1{ background-color: #f8f8f8 !important;}
-.bg-dark2{background-color: #0a0a0a !important;}
+.bg-dark2{background-color: #fafafa !important;}
 .bg-light{background-color: #38393D !important;}
 
 .color-white {color: #fff !important;}
