--- a/templates/menu.html
+++ b/templates/menu.html
@@ -46,13 +46,13 @@
 			<div class='wrap-it'>
 				<div class='list'>
 
-				  <a  menu-close mainmenu class="item item-icon-left item-icon-right color-gery active-menu" href="#/app/landing">
+				  <a  menu-close mainmenu class="item item-icon-left item-icon-right color-white active-menu" href="#/app/landing">
 						<i class="icon ion-android-car f-size-25 color-d-gery"></i>
 						 {{ 'Book My Ride' | langTranslate: appConvertedLang['Book_My_Ride'] }}
 						<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
 				  </a>
 
-				  <a  menu-close mainmenu ng-click='load_trips()' class="item item-icon-left item-icon-right color-gery "  href="#/app/mytrip">
+				  <a  menu-close mainmenu ng-click='load_trips()' class="item item-icon-left item-icon-right color-white "  href="#/app/mytrip">
 						<i class="icon ion-speedometer f-size-25"></i>
 							{{ 'My Trips' | langTranslate: appConvertedLang['My_Trips'] }}
 						<i class="icon ion-ios-arrow-forward f-size-25"></i>
@@ -96,10 +96,10 @@
 					<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
 				  </a> -->
 
-					<a  menu-close  ng-click='logout()' class="item item-icon-left item-icon-right color-gery no-border " >
-						<i class="icon ion-ios-information f-size-25 color-d-gery"></i>
+					<a  menu-close  ng-click='logout()' class="item item-icon-left item-icon-right color-white no-border " >
+						<i class="icon ion-ios-information f-size-25 color-white"></i>
 							{{ 'Logout' | langTranslate: appConvertedLang['Logout'] }}
-						<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
+						<i class="icon ion-ios-arrow-forward f-size-25 color-white"></i>
 				  </a>
 
 				</div>
