--- a/templates/menu.html
+++ b/templates/menu.html
@@ -37,7 +37,7 @@
 					<a menu-close  class="item item-icon-left item-icon-right color-white" ng-style="{'line-height': '20px'}" href="#/app/settings">
 						<!-- <img class='icon-30' src='img/logo.png'/>	 -->
 						<span>{{user_data.User_name}}</span>
-						<p class='color-gery'>{{user_data.Mobile}}</p>
+						<p class='color-white'>{{user_data.Mobile}}</p>
 						<i class="icon ion-gear-b  color-white"></i>
 					</a>
 				</div>
@@ -47,9 +47,9 @@
 				<div class='list'>
 
 				  <a  menu-close mainmenu class="item item-icon-left item-icon-right color-white active-menu" href="#/app/landing">
-						<i class="icon ion-android-car f-size-25 color-d-gery"></i>
+						<i class="icon ion-android-car f-size-25 color-white"></i>
 						 {{ 'Book My Ride' | langTranslate: appConvertedLang['Book_My_Ride'] }}
-						<i class="icon ion-ios-arrow-forward f-size-25 color-d-gery"></i>
+						<i class="icon ion-ios-arrow-forward f-size-25 color-white"></i>
 				  </a>
 
 				  <a  menu-close mainmenu ng-click='load_trips()' class="item item-icon-left item-icon-right color-white "  href="#/app/mytrip">
