--- a/templates/trip-details.html
+++ b/templates/trip-details.html
@@ -11,16 +11,16 @@
 								<p class='color-white'>{{ 'BOOKING ID' | langTranslate: appConvertedLang['BOOKING_ID'] }}</p>
 						</div>
 						<div class="col col-50 " >
-							<div class="color-gery">{{details.uneaque_id}} </div>
+							<div class="color-white">{{details.uneaque_id}} </div>
 						</div>
 				</div>
 				<div class="row ">
 						<div class="col col-50 col-center" >
 								<p class='color-white'>{{ 'PICKUP POINT' | langTranslate: appConvertedLang['PICKUP_POINT'] }}</p>
-							<div class=" color-gery">{{details.pickup_area}}</div>
+							<div class=" color-white">{{details.pickup_area}}</div>
 						</div>
 						<div class="col col-50 col-center" >
-							<div class="m-top-30 color-gery">{{details.pickup_time}} , {{details.pickup_date}}</div>
+							<div class="m-top-30 color-white">{{details.pickup_time}} , {{details.pickup_date}}</div>
 						</div>
 				</div>
 				<div class='m-top-30 text-center'>
@@ -31,10 +31,10 @@
 				<div class="row ">
 						<div class="col  col-center" >
 								<p class='color-white'>{{ 'DROP POINT' | langTranslate: appConvertedLang['DROP_POINT'] }}</p>
-							<div class=" color-gery">{{details.drop_area}}</div>
+							<div class=" color-white">{{details.drop_area}}</div>
 						</div>
 						<div class="col   col-center" >
-							<div class="m-top-30 color-gery" ng-show='details.drop_time.length'>{{details.drop_time}} , {{details.drop_date}}</div>
+							<div class="m-top-30 color-white" ng-show='details.drop_time.length'>{{details.drop_time}} , {{details.drop_date}}</div>
 						</div>
 				</div>
 
@@ -44,11 +44,11 @@
 			<div class="row no-padding b-border-light">
 						<div class="col  r-border-light p-10 text-center" >
 							<p class='color-white p-head '>{{ 'CAB TYPE' | langTranslate: appConvertedLang['CAB_TYPE'] }}</p>
-							<p class='color-gery'>{{details.taxi_type}}</p>
+							<p class='color-white'>{{details.taxi_type}}</p>
 						</div>
 						<div class="col  p-10 text-center" >
 							<p class='color-white p-head '>{{ 'DRIVER DETAILS' | langTranslate: appConvertedLang['DRIVER_DETAILS'] }}</p>
-							<p class='color-gery'>{{details.driver}}</p>
+							<p class='color-white'>{{details.driver}}</p>
 						</div>
 			</div>
 
@@ -58,10 +58,10 @@
 				</div>
 				<div class="row p-top-5  b-border-light">
 						<div class="col  p-10 col-center" >
-							<p class='color-gery no-margin'>{{ 'Distance' | langTranslate: appConvertedLang['Distance'] }}</p>
+							<p class='color-white no-margin'>{{ 'Distance' | langTranslate: appConvertedLang['Distance'] }}</p>
 						</div>
 						<div class="col   p-10 text-center col-center" >
-							<p class='pull-right'><span class='color-gery'>{{details.km}}</span> <span class='color-white'>km</span></p>
+							<p class='pull-right'><span class='color-white'>{{details.km}}</span> <span class='color-white'>km</span></p>
 						</div>
 				</div>
 
