--- a/templates/trip-details.html
+++ b/templates/trip-details.html
@@ -43,7 +43,7 @@
 
 			<div class="row no-padding b-border-light">
 						<div class="col  r-border-light p-10 text-center" >
-							<p class='color-white p-head '>{{ 'CAB TYPE' | langTranslate: appConvertedLang['CAB_TYPE'] }}</p>
+							<p class='color-white p-head '>{{ 'Tipo de Carga' | langTranslate: appConvertedLang['CAB_TYPE'] }}</p>
 							<p class='color-white'>{{details.taxi_type}}</p>
 						</div>
 						<div class="col  p-10 text-center" >
