--- a/css/theme.css
+++ b/css/theme.css
@@ -1,27 +1,26 @@
-/* BG COLOR
+/* BG COLOR 
 =================*/
 
-.bg-yellow{ background-color: rgba(0, 0, 0, 0); }
-.bg-black{ background-color: #;}
-.bg-white{background-color: #ffffff;}
+.bg-yellow{ background-color: #F2C21E; }
+.bg-black{ background-color: #000;}
+.bg-white{background-color: #fff;}
 
-.bg-dark{ background-color: #ffffff !important;}
-.bg-dark1{ background-color: #f8f8f8 !important;}
-.bg-dark2{background-color: #fafafa !important;}
+.bg-dark{ background-color: #161616 !important;}
+.bg-dark1{ background-color: #2e2f32 !important;}
+.bg-dark2{background-color: #1c1c1c !important;}
 .bg-light{background-color: #38393D !important;}
 
 .color-white {color: #fff !important;}
-.bg-grey{  background-color: #000000}
+.bg-grey{  background-color: #212224}
 
 /* common color */
-.color-yellow{ color:  #000000 !important;}
-.color-gery{ color: #131313 !important }
+.color-yellow{ color:  #F2C21E !important;}
+.color-gery{ color: #929292 !important }
 .color-d-gery{ color: #4d4d4d !important }
-.color-white{ color: #ffffff !important }
 
 .test-h{height: 40px}
 
-.border-r-yellow{ border-right: 1px solid #0685ab}
+.border-r-yellow{ border-right: 1px solid #584A18}
 
 
 .visible {
@@ -29,23 +28,23 @@
   opacity: 1;
   transition: opacity .2S linear;
 	-webkit-transition: opacity .2S linear;
-
+	
 }
 .hidden {
   visibility: hidden;
   opacity: 0;
 	transform:translate3d(10%, 0, 0);
   transition: visibility 0s .2s, opacity .2s linear,transform .3S;
-
+	
 	-webkit-transform:translate3d(10%, 0, 0);
   -webkit-transition: visibility 0s .2s, opacity .2s linear,transform .3S;
-
+	
 }
 
 
 
 
-/* BUTTON
+/* BUTTON 
 =====================*/
 .btn{ border-radius: 20px; display: block; height: 35px; width: 100%}
 .border-white{ border: 1px solid #fff; }
@@ -60,15 +59,15 @@
 .underline{ text-decoration: underline;}
 
 .set-bg{
-	background-size:   cover;
+	background-size:   cover;                
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center center; 
 }
-/* #set-top{ border: 1px solid #00b3e8;} */
+/* #set-top{ border: 1px solid #F2C21E;} */
 
-.popup{ background-color: #ffffff !important; border-radius: 10px !important;}
+.popup{ background-color: #444444 !important; border-radius: 10px !important;}
 
-.popup-head { border-bottom: 1px solid #000000 !important; }
+.popup-head { border-bottom: 1px solid #73632B !important; }
 
 .popup-title {}
 
@@ -78,7 +77,7 @@
 
 .popup-buttons.row {}
 
-.popup-buttons .button {border: 1px solid #1C1C1C !important; color: #ffffff !important; background-color:#444444 !important; border-radius: 5px !important; }
+.popup-buttons .button {border: 1px solid #1C1C1C !important; color: #F2C21E !important; background-color:#444444 !important; border-radius: 5px !important; }
 
 
 
@@ -89,7 +88,7 @@
 
 
 #my-pop{
-
+	
 	/* height: 50%; */
 	position: absolute;
 	z-index: 20;
@@ -97,17 +96,17 @@
 	top: 100%;
 	/* background-color: rgba(0,0,0,.8); */
 	width: 100%;
-
+	
 	-webkit-transform: translate3d(0, 100%, 0);
 	-webkit-transition: all 0.4s ease-in-out;
-
+	
 	transform: translate3d(0, 100%, 0);
 	transition: all 0.4s ease-in-out;
 }
 #my-pop.my-active{
 	-webkit-transform: translate3d(0, -100%, 0);
 	-webkit-transition: all 0.4s ease-in-out;
-
+	
 	transform: translate3d(0, -100%, 0);
 	transition: all 0.4s ease-in-out;
 }
@@ -115,7 +114,7 @@
 .animation-styles{
 	-webkit-backface-visibility: hidden;
 	-webkit-perspective: 1000;
-
+	
 	backface-visibility: hidden;
 	perspective: 1000;
 }
